Adding new page for Child Mortality with dummy data

--- a/MyApp/templates/home.html
+++ b/MyApp/templates/home.html
@@ -34,7 +34,7 @@
     </style>
 
 </head>
-<body>
+<body onload="initializeWorldPopulation()">
 
 <div id="__MainContainer" style="padding-bottom: 0px;">
     <div id="frmHome_container" class="slForm" style="padding:0% 0% 0% 0%">
