Added Mortality Data

--- a/MyApp/templates/home.html
+++ b/MyApp/templates/home.html
@@ -2,57 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Populization</title>
     <link rel="stylesheet" type="text/css" href="static/css/home.css">
     <link rel="stylesheet" type="text/css" href="static/css/sample.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
+    <script src="https://www.amcharts.com/lib/4/core.js"></script>
+    <script src="https://www.amcharts.com/lib/4/charts.js"></script>
+    <script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
+
     <script src="https://unpkg.com/topojson@3.0.2/dist/topojson.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    {% load static %}
-    <script type="text/javascript" src="{%  static 'scripts/pyramidChart.js' %}"></script>
-    <script type="text/javascript" src="{%  static 'scripts/choroplethNew.js' %}"></script>
-    <script type="text/javascript" src="{%  static 'scripts/app.js' %}"></script>
-    <script type="text/javascript" src="{%  static 'scripts/bubble.js' %}"></script>
-    <script type="text/javascript" src="{%  static 'scripts/lineChart2.js' %}"></script>
-    <script type="text/javascript" src="{%  static 'scripts/barChartNew.js' %}"></script>
-
-    <style>
-        .sphere {
-            fill: #4242e4;
-        }
-        
-        .country {
-        
-            stroke: black;
-            stroke-opacity: 0.1;
-        }
-    </style>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+            integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+            integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </head>
-<body onload="initializeWorldPopulation()">
-
-<div id="__MainContainer" style="padding-bottom: 0px;">
+<body>
+<div id="MainContainer" style="padding-bottom: 0px;">
     <div id="frmHome_container" class="slForm" style="padding:0% 0% 0% 0%">
         <form id="frmHome" action="javascript:;"
-              class="kwt100" style="position: relative; height: 1300px; overflow: hidden auto;">
+              class="kwt100" style="position: relative; height: 1600px; overflow: visible;">
 
             <!-- Header -->
             <div class="kcell slFbox"
-                 style="position: absolute; z-index: 1; opacity: 1; overflow: hidden; box-shadow: none;
+                 style="position: absolute; z-index: 1; opacity: 1; overflow: visible; box-shadow: none;
                   border: 0px !important; background: transparent !important; width: 100%; height: 105px; left: 0px; top: 0px;">
 
                 <div id="flexcontainer_wrapper" class=" " style="width: 100%; height: 100%;">
 
                     <div class="kwt100  slFbox " id="frmHome_flexHeader" kwidgettype="FlexContainer" kformname="frmHome"
-                         style="position: relative; overflow: hidden; height: 100%;">
+                         style="position: relative; overflow: visible; height: 100%;">
 
                         <div class="kcell CopydefLabel0cf3c566e29dc49" style="position: absolute; z-index: 1;
-                         opacity: 1; overflow: hidden; border: 0px !important; background: transparent !important;
+                         opacity: 1; overflow: visible; border: 0px !important; background: transparent !important;
                           width: 1013px; height: 21px; left: 126px; top: 65px;">
 
                             <div id="frmHome_Description" kwidgettype="Label" kformname="frmHome"
@@ -64,21 +50,21 @@
                         </div>
 
                         <div class="kcell CopyslFbox0ec6ba7b7d8aa41" style="position: absolute; z-index: 1; opacity: 1;
-                         overflow: hidden; box-shadow: none; border: 0px !important; background: transparent !important;
+                         overflow: visible; box-shadow: none; border: 0px !important; background: transparent !important;
                           width: 100%; height: 5px; left: 0px; top: 100px;">
 
                             <div id="flexcontainer_wrapper" class=" " style="width: 100%; height: 100%;">
 
                                 <div class="kwt100  CopyslFbox0ec6ba7b7d8aa41 " id="frmHome_partition"
                                      kwidgettype="FlexContainer" kformname="frmHome" style="position: relative;
-                                      overflow: hidden; height: 100%;">
+                                      overflow: visible; height: 100%;">
 
                                 </div>
                             </div>
                         </div>
 
                         <div class="kcell CopydefLabel0e4ea8f0eac614f" style="position: absolute; z-index: 1;
-                        opacity: 1; overflow: hidden; border: 0px !important; background: transparent !important;
+                        opacity: 1; overflow: visible; border: 0px !important; background: transparent !important;
                         width: 179px; height: 36px; left: 126px; top: 22px;">
                             <div id="frmHome_AppName" kwidgettype="Label" kformname="frmHome"
                                  class=" CopydefLabel0e4ea8f0eac614f cntmiddleleftalign disableSelection"
@@ -88,14 +74,14 @@
                         </div>
 
                         <div class="kcell CopyslFbox0dfb3a51b9de448" style="position: absolute; z-index: 1; opacity: 1;
-                         overflow: hidden; box-shadow: none; border: 0px !important; background: transparent !important;
+                         overflow: visible; box-shadow: none; border: 0px !important; background: transparent !important;
                           width: 100%; height: 102px; left: 0px; top: 0%;">
 
                             <div id="flexcontainer_wrapper" class=" " style="width: 100%; height: 100%;">
 
                                 <div class="kwt100  CopyslFbox0dfb3a51b9de448 " id="frmHome_Header1"
                                      kwidgettype="FlexContainer" kformname="frmHome" style="position: relative;
-                                      overflow: hidden; height: 100%;">
+                                      overflow: visible; height: 100%;">
 
                                     <div class="kcell slImage" style="position: absolute; z-index: 1; opacity: 1;
                                      border: 0px !important; background: transparent !important; width: 75px;
@@ -124,101 +110,39 @@
               background-color: rgba(0, 0, 0, 0.21);">
                 <div id="flexcontainer_wrapper" class=" " style="width: 100%; height: 100%;">
                     <div class="kwt100  CopyslFbox0aa256162748d4a " id="frmHome_flexBody" kwidgettype="FlexContainer"
-                         kformname="frmHome" style="position: relative; overflow: hidden; height: 100%;">
+                         kformname="frmHome" style="position: relative; overflow: visible; height: 100%;">
 
                         <!-- Options -->
                         <div class="kcell" style="position: absolute; z-index: 1; opacity: 1;
-                         overflow: hidden; box-shadow: none; border: 0px !important; background: transparent !important;
-                          width: 95%; height: 2.5%; left: 2.5%; top: 0px;">
-                            <button id="defaultOpen" class="tablinks btn btn-primary"
-                                    onclick="changeChart(event, 'Line Chart')">Line Chart</button>
-                            <button class="tablinks btn btn-secondary" onclick="changeChart(event, 'Bar Chart')">
-                                Bar Chart</button>
-                            <!--button class="tablinks" onclick="changeChart(event, 'Scatter Chart')">Pie Chart</button>
-                             -->
-                        </div>
-
-                        <!-- Line Chart -->
-                        <div class="kcell CopyslFbox0idd24cb8494c45" style="position: absolute; z-index: 1; opacity: 1;
-                        overflow: hidden; box-shadow: none; border: 0px !important; background: transparent !important;
-                        width: 95%; height: 49%; left: 2.5%; top: 2.5%;">
-
-                            <div id="flexcontainer_wrapper" class=" " style="width: 100%; height: 100%;">
-
-                                <div class="kwt100  CopyslFbox0idd24cb8494c45 " id="frmHome_flxLineChart"
-                                     kwidgettype="FlexContainer" kformname="frmHome" style="position: relative;
-                                     overflow: hidden; height: 100%;">
-
-                                    <div id="line-chart" >
-                                        <div class="content-text" style="margin-top: 1%"><span>World level population</span></div>
-                                        <br>
-                                        <div id="lineChartDiv">
-                                            <svg id="line_bar_scatter">
-                                                <rect id="chartRect" style="fill:none; stroke:black; stroke-width:5; opacity:0.5"></rect>
-                                                <g id="gcontainer">
-                                                    <text id="xAxisText">Year</text>
-                                                    <g id="xAxis"></g>
-
-                                                    <text id="yAxisText">Population</text>
-                                                    <g id="yAxis"></g>
-
-                                                    <g id="searchLineX"></g>
-                                                    <g id="searchLineY"></g>
-
-                                                    <g id="plot"></g>
-
-                                                    <text id="rangeStart">Start year: </text>
-                                                    <g id="Start_Slider"></g>
-
-                                                    <text id="rangeEnd">End year: </text>
-                                                    <g id="End_Slider"></g>
-                                                </g>
-                                            </svg>
-                                        </div>
+                         overflow: visible; box-shadow: none; border: 0px !important; background: transparent !important;
+                          width: 95%; height: 50px; left: 2.5%; top: 0px;">
+                            <div class="left-container">
+                                <div class="list-inline list-group-horizontal">
+                                    <div class="form-check btn-group"
+                                         role="group" data-toggle="buttons">
+                                        <label class="btn btn-secondary active"
+                                               onclick="showPage('populationTrend', initializePopulationTrends)">
+                                            <input type="radio" class="form-radio list-group-item">
+                                            Population trends
+                                        </label>
+                                        <label class="btn btn-secondary"
+                                                   onclick="showPage('pyramidChartHtml', initializeGenderDistribution)">
+                                            <input type="radio" class="form-radio list-group-item">
+                                            Gender Distribution
+                                        </label>
+                                        <label class="btn btn-secondary"
+                                               onclick="showPage('fertility', initializeFertilityTrends)">
+                                            <input type="radio" class="form-radio list-group-item">
+                                            Fertility rates
+                                        </label>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Choropleth -->
-                        <div class="kcell CopyslFbox0g7e63a02829f45" style="position: absolute; z-index: 1; opacity: 1;
-                        overflow: hidden; box-shadow: none; border: 0px !important; background: transparent !important;
-                        width: 95%; height: 45%; left: 2.5%; top: 51.5%;">
-                            <div id="flexcontainer_wrapper" class=" " style="width: 100%; height: 100%;">
-
-                                <div class="kwt100  CopyslFbox0g7e63a02829f45 " id="frmHome_flxChoropleth"
-                                     kwidgettype="FlexContainer" kformname="frmHome" style="position: relative;
-                                     overflow: hidden; height: 100%;">
-                                    <div style="display:flex">
-                                        <div id="continentBubble" style="flex: 0 0 50%;">
-                                            <div class="content-text">
-                                                Continent level population (Area in million sq.km units)
-                                            </div>
-                                            <div id="bubbleChartDiv" style="flex: 0 0 50%;"></div>
-                                            <div id="barChartDiv" style="flex: 0 0 50%;"></div>
-
-                                        </div>
-                                        <div  id="world-map" style="flex: 0 0 50%;">
-                                            <div class="content-text">
-                                                Country level (select at most 10 countries)
-                                            </div>
-                                            <div id="choroplethDiv" style="flex: 0 0 50%;">
-                                                <svg id="map" width="100%" height="100%">
-                                                    <g id="gMap">
-                                                        <rect style="fill:yellow"></rect>
-                                                    </g>
-                                                    <g id="Choropleth_Slider" style="left:50px">
-                                                        
-                                                    </g>
-                                                </svg>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <div id="divSelect"></div>
                         <!-- Footer -->
-                        <div style="text-align:center; position: absolute; width: 100%; height: 3.5%; left: 0px; top: 96.5%;">
+                        <div style="text-align:center; position: absolute; width: 100%; height: 65px; left: 0px; bottom: 0%;">
                             <span>©&nbsp;2020&nbsp;-Rutgers University.<br/>Special thanks to US Census Bureau for providing the data.</span>
                         </div>
                     </div>
@@ -227,5 +151,21 @@
         </form>
     </div>
 </div>
+
+{% load static %}
+<script type="text/javascript" src="{%  static 'scripts/d3-tip.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/pyramidChoropleth.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/pyramidChart.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/barChartNew2.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/populationTrends.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/chordChart.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/stackedBar.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/lineChart3.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/choroplethNew.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/fertility.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/mortality.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/pyramidChart.js' %}"></script>
+<script type="text/javascript" src="{%  static 'scripts/app.js' %}"></script>
+
 </body>
 </html>
