--- a/MyApp/static/css/home.css
+++ b/MyApp/static/css/home.css
@@ -2,6 +2,174 @@
     width: 100%
 }
 
+#mapDiv .sphere {
+    fill: #0600b8;
+}
+
+#mapDiv {
+    width: 80%;
+    height: 85%;
+    left: 2.5%;
+    top: 0%;
+    margin:auto;
+    background-color: #0600b8;
+}
+
+#fertilityMapDiv {
+    width: 80%;
+    height: 85%;
+    left: 2.5%;
+    top: 0%;
+    margin:auto;
+    background-color: #000000;
+}
+
+.stackedBarDiv {
+    width: 9.8%;
+    height: 100%;
+    top: 0%;
+    float: left;
+}
+
+.d3-tip {
+    line-height: 1;
+    padding: 6px;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    border-radius: 4px;
+    font-size: 12px;
+}
+
+/* Creates a small triangle extender for the tooltip */
+.d3-tip:after {
+    box-sizing: border-box;
+    display: inline;
+    font-size: 10px;
+    width: 100%;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.8);
+    content: "\25BC";
+    position: absolute;
+    text-align: center;
+}
+
+/* Style northward tooltips specifically */
+.d3-tip.n:after {
+    margin: -2px 0 0 0;
+    top: 100%;
+    left: 0;
+}
+
+.genderRatio .sphere {
+    fill: black;
+
+}
+.genderRatio .country {
+
+    stroke: black;
+    stroke-opacity: 0.1;
+}
+
+.country {
+    stroke: black;
+    stroke-opacity: 0.1;
+}
+
+.container {
+    text-align-last: center;
+    max-width: 1200px !important;
+}
+
+.left-container {
+    max-width: 1200px !important;
+}
+
+.btn-light.hover .btn-light:hover {
+    border-color: black !important;
+}
+
+.btn-light {
+    opacity: 0.80;
+}
+
+.btn-light.active {
+    border-color: black !important;
+    opacity: 1;
+    border-width: 4px;
+}
+
+.btn-secondary.active {
+    color: white !important;
+    border-color: #0062cc !important;
+    background-color: #0062cc !important;
+}
+
+#World, #World.active {
+    background-color: #67b7dc !important;
+}
+#Asia, #Asia.active {
+    background-color: #845EC2 !important;
+}
+#Africa, #Africa.active {
+    background-color: #D65DB1 !important;
+}
+#North\ America, #North\ America.active {
+    background-color: #F26430 !important;
+}
+#South\ America, #South\ America.active {
+    background-color: #009B72 !important;
+}
+#Europe, #Europe.active {
+    background-color: #FFC73F !important;
+}
+#Oceania, #Oceania.active {
+    background-color: #473198 !important;
+}
+
+.list-group-horizontal .list-group-item {
+    display: inline-block;
+}
+.list-group-horizontal .list-group-item:focus {
+    background-color: #41AADA !important;
+    color:#fff;
+    display: inline-block;
+}
+.list-group-horizontal .list-group-item {
+    margin-bottom: 0;
+    margin-left:-4px;
+    margin-right: 0;
+    opacity: 0;
+}
+.list-group-horizontal .list-group-item:first-child {
+    border-top-right-radius:0;
+    border-bottom-left-radius:4px;
+}
+.list-group-horizontal .list-group-item:last-child {
+    border-top-right-radius:4px;
+    border-bottom-left-radius:0;
+}
+.form-check label {
+    padding:.75rem 2.5rem;
+    margin-bottom:0;
+}
+.form-check label input[type="checkbox"] {
+    opacity:0;
+}
+.form-check {
+    padding-left: 0rem !important;
+}
+
+.form-radio label {
+    padding:.75rem 2.5rem;
+    margin-bottom:0;
+}
+.form-radio label input[type="radio"] {
+    opacity:0;
+}
+.form-radio {
+    padding-left: 0rem !important;
+}
+
 .ButtonLinkFocusSkin,.CopyLink0aaf32d008e014c,.CopyLink0df8778f358cf45,.CopyLink0he3766aa39d245,.CopyLink0jbf2ae5d820644,.Link2,.CopydefLabel0cf3c566e29dc49,.CopydefLabel0d5728061204344,.CopydefLabel0e4ea8f0eac614f,.CopydefLabel0h8bda83362cd46,.Label2,.defLabel,.sknLblDescription,.sknLblRowHeading,.sknLblStrip,.sknLblTimeStamp,.sknSectionHeaderLabelSkin,.slForm,.slWatchForm,.slPopup {
     -moz-border-radius: 0;
     -webkit-border-radius: 0;
