--- a/MyApp/static/css/sample.css
+++ b/MyApp/static/css/sample.css
@@ -1,5 +1,5 @@
 .header {
-    overflow: hidden;
+    overflow: visible;
     background-color: linear-gradient(315deg, #6b0f1a 0%, #b91372 74%);;
     padding: 5px 5px;
 }
@@ -128,6 +128,12 @@
     font: normal 400 18.0px Georgia;
 }
 
+.notes-text {
+    margin-left: 20px;
+    color: rgb(0, 0, 0);
+    font: normal 400 14.0px Georgia;
+}
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -200,15 +206,17 @@ hr.style1 {
 .x path {
     display: none;
 }
-.toolTip {
-    position: absolute;
-    display: none;
-    min-width: 150px;
-    height: auto;
-    background: none repeat scroll 0 0 #ffffff;
-    border: 1px solid #6F257F;
-    padding: 14px;
-    text-align: center;
+
+#mapToolTip {
+          position: absolute;
+          text-align: center;
+          width: 80px;
+          height: 14px;
+          padding: 2px;
+          font: 12px sans-serif;
+          background: #fff;
+          border: 0px;
+          pointer-events: none;
 }
 
 /*
@@ -431,9 +439,13 @@ div.tooltip.w:after {
 /* Line chart*/
 #lineChartDiv {
     width: 95%;
-    height: 520px;
+    height: 95%;
     margin-left: 2.5%;
     margin-right: 2.5%;
+}
+
+.container.fertility_continents {
+    mtop:25%;
 }
 
 .axis {
